<resources>
    <string name="app_name">Cookshelf</string>
    <string name="welcome">Welcome to Cookshelf!</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">0FhomS1VgNtycywAYLMsCg9bUF7fpeOkrsRBeCyc</string>
    <string name="back4app_client_key">9Yhzp9yahXMnvWJVhdkL6YDVBK7KjE2h2VZED1zr</string>
    <string name="SignUp">Sign Up</string>
    <string name="Login">Login</string>
    <string name="CreateAccount">Create Account</string>
    <string name='logout'>LOGOUT</string>
    <string name='preferences'>PREFERENCES</string>
    <string name='home'>HOME</string>
    <string name='search'>SEARCH</string>
    <string name='favorites'>FAVORITES</string>
    <string name='submit'>SUBMIT</string>
    <string name="old_username">Old Username</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_username">New Username</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="users">VIEW USERS</string>
    <string name="recipes">VIEW RECIPES</string>
    <string name="approve">APPROVE RECIPES</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="image">Image URL</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="submit_recipe">Submit Recipe</string>
    <string name="view">View</string>
    <string name="favorite">Favorite</string>
    <string name="delete_user">Delete User</string>


</resources>